--- a/index.html
+++ b/index.html
@@ -8,8 +8,8 @@
 </head>
 <body>
     <div class="wrapper">
-        <h2 class="question">Do you like me a lot?</h2>
-        <img class="gif" alt="gif" src="https://media.giphy.com/media/FTGah7Mx3ss04PcasF/giphy.gif"/>
+        <h2 class="question">Answer yes or no :)</h2>
+        <img class="gif" alt="gif" src="https://media.giphy.com/media/R51a8oAH7KwbS/giphy.gif"/>
         <div class="btn-group">
             <button class="yes-btn">Yes</button>
             <button class="no-btn">No</button>
